2010-09-20  Stefan Monnier  <monnier@iro.umontreal.ca>

	* progmodes/prolog.el (prolog-smie-forward-token)
	(prolog-smie-backward-token): New functions.
	(prolog-mode-variables): Use them to parse "!," correctly.
	Set up smie-blink-matching for ".".

	* textmodes/ispell.el (ispell-start, ispell-end): Rename from `start'
	and `end'.
	(ispell-region, ispell-process-line): Update users.

	* textmodes/reftex-parse.el (reftex-what-macro): Don't hardcode
	point-min==1.

	* textmodes/ispell.el: Fix commenting convention.
	(ispell-parse-output): Simplify, use push.
	(ispell-region): Use match-string-no-properties.
	(ispell-begin-skip-region-regexp): Use mapconcat to simplify.
	(ispell-minor-mode): Use define-minor-mode.
	(ispell-message): Remove unused var `skip-regexp'.
	(ispell-add-per-file-word-list): Use dynamic let-binding.
	Try and use the proper comment marker.

	* mail/sendmail.el: Fix commenting convention.
	(sendmail-send-it): Use line-beginning-position.

	* help-fns.el (describe-variable): Add original value, if applicable.

2010-09-20  Juanma Barranquero  <lekktu@gmail.com>

	* subr.el (y-or-n-p): Remove leftover code from revno 101459.

	* emacs-lisp/smie.el (smie-indent--hanging-p): Use `smie-indent--bolp'.

2010-09-19  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/smie.el (smie-bnf-precedence-table): Improve error message.
	(smie-debug--prec2-cycle, smie-debug--describe-cycle): New functions.
	(smie-prec2-levels): Use them to better diagnose precedence cycles.
	(smie-blink-matching-check): Don't signal a mismatch if car is t.
	(smie-blink-matching-open): Rewrite to remove assumptions, so that
	something like "." can also be a closer.
	(smie--associative-p, smie-indent--hanging-p, smie-indent--bolp)
	(smie-indent--offset, smie-indent--offset-rule, smie-indent--column):
	Rename internal functions to use "--".  Update callers.

	* frame.el (make-frame-names-alist): Don't list frames on other displays.

	* fringe.el (fringe-styles): New var.